# motoc

./: Cargo.toml  README.md
.github/workflows/: check-build.yaml  make-release.yml
src/: common.rs  helpers_xr.rs  logbridge.rs  main.rs  mndx.rs  test.rs  transformd.rs
src/calibrator/: floor.rs  mod.rs  monitor.rs  offset.rs  recenter.rs  sampled.rs
