[package]
name = "motoc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
libmonado-rs = { git = "https://github.com/technobaboo/libmonado-rs.git", rev = "8982759c936ddf3d0fffc96ec404bfe53971276d" }
log = "0.4.22"
mint = { version = "0.5.9", features = ["serde"] }
nalgebra = { version = "0.33.0", features = ["mint", "serde-serialize"] }
openxr = { git = "https://github.com/Ralith/openxrs.git", rev = "6c7747aee678048642dc16aad8bab3d6961dce03", features = [
  "linked",
  "mint",
], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
xdg = "2.5.2"

[build-dependencies]
bindgen = "0.70.1"
