[package]
name = "motoc"
description = "Monado Tracking Origin Calibrator"
version = "0.3.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.5"
indicatif = "0.17.8" # needs to match bridge below
indicatif-log-bridge = "0.2.3"
libmonado = { git = "https://github.com/technobaboo/libmonado-rs.git", rev = "256895b18c8f9368174fad8a6232ff07764eeacb" }
log = "0.4.22"
mint = { version = "0.5.9", features = ["serde"] }
nalgebra = { version = "0.34.1", features = ["mint", "serde-serialize"] }
openxr = { git = "https://github.com/Ralith/openxrs.git", rev = "6c7747aee678048642dc16aad8bab3d6961dce03", features = [
  "linked",
  "mint",
], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
xdg = "3.0.0"

[build-dependencies]
bindgen = "0.72.1"
